# UnderScoreGame

./: .gitignore  CMakeLists.txt  Debug\logs\log_15_08_21.txt  build\logs\log_14_08_21.txt  build\logs\log_15_08_21.txt  main.cpp
Debug/: UnderScoreGame
UnderScoreGame.build/Debug/UnderScoreGame.build/Objects-normal/x86_64/: CoreHelpers.d  Logger.d  UnderScoreGame.LinkFileList  main.d
UnderScoreGame.build/Debug/ZERO_CHECK.build/: Script-398B9B6FBAC14A92855F8928.sh
UnderScoreGame.xcodeproj/: project.pbxproj
UnderScoreGame.xcodeproj/project.xcworkspace/xcuserdata/arthurzerr.xcuserdatad/: UserInterfaceState.xcuserstate
UnderScoreGame.xcodeproj/xcuserdata/arthurzerr.xcuserdatad/xcschemes/: xcschememanagement.plist
src/Engine/: Window.hpp
src/Engine/Core/: CoreHelpers.cpp  CoreHelpers.hpp  CoreRender.hpp  CoreRenderer.hpp  CoreWindow.hpp
src/Engine/Logger/: Logger.cpp  Logger.hpp  LoggerTypes.hpp
src/Engine/Window/: GLFWWindow.hpp  SDLWindow.hpp
src/Game/: Game.hpp
src/Window/: GameWindow.cpp
src/headers/: GameWindow.h
